@@ -1,8 +1,8 @@
 <gconfschemafile>
 	<schemalist>
 		<schema>
-			<key>/schemas/apps/y2cc-gnome/cc_actions_list</key>
-			<applyto>/apps/y2cc-gnome/cc_actions_list</applyto>
+			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_actions_list</key>
+			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_actions_list</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>list</type>
 			<list_type>string</list_type>
@@ -13,8 +13,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_static_action</key>
-			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_static_action</applyto>
+			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_static_action</key>
+			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_static_action</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -24,8 +24,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_start</key>
-			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_start</applyto>
+			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_start</key>
+			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_start</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -35,8 +35,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_help</key>
-			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_help</applyto>
+			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_help</key>
+			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_help</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -46,8 +46,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_add_remove</key>
-			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_add_remove</applyto>
+			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_add_remove</key>
+			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_add_remove</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -57,8 +57,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</key>
-			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</applyto>
+			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</key>
+			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
